[metadata]
name = bsch
version = 1.0.dev0
description = Utilities and Python package for the Bosch GTC 400C (and more Bosch tools).
long_description = file: README.md
long_description_content_type = text/markdown
author = Philipp Klaus
author_email = philipp.l.klaus@web.de
url = https://github.com/pklaus/bsch
license = GPL
platforms = any
keywords = binary, time series, file, storage
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Archiving :: Compression
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = True
install_requires = 
    typing; python_version < "3.5"

[options.entry_points]
console_scripts =
    gtc400c-ftp = bsch.gtc400c.ftp:main
    gtc400c-plot = bsch.gtc400c.util:cli_plot
    gtc400c-thermogram = bsch.gtc400c.util:cli_thermogram
    gtc400c-blend = bsch.gtc400c.util:cli_blend

[options.extras_require]
plotting:  numpy; Pillow; matplotlib
